--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body {
     background-color: beige;
 }
+header {
+    background-color: blanchedalmond;
+}
+footer {
+    background-color: bisque;
+}
+nav {
+    background-color:burlywood;
+}
+main {
+    background-color: black;
+    color:aliceblue;
+}
