--- a/style.css
+++ b/style.css
@@ -14,3 +14,26 @@ main {
     background-color: black;
     color:aliceblue;
 }
+.container{
+    display:flex;
+    justify-content:space-around;
+    background-color: white;
+    margin:20px;
+    gap:1em;
+}
+.item-1{
+    background-color: wheat;
+    flex-grow:1;
+}
+.item-2{
+    background-color: wheat;
+    flex-grow:1;
+}
+.item-3{
+    background-color: wheat;
+    flex-grow:1;
+}
+.item-4{
+    background-color: wheat;
+    flex-grow:1;
+}
